starting new homepage

--- a/search.html
+++ b/search.html
@@ -7,38 +7,38 @@
 	<title>Search</title>
 </head>
 <body>
-	<div class="container">
-		<div class="search-bar">
-			<label class="search-icon" for="search"><img class="glasses" src="search.svg" alt="glasses"></label>
-			<input id="search" class="search-input" type="text" name="search">
+	<header>
+		<a href="#" class="logo">Sky<span>Fox</span></a>
 
+		<nav class="navbar">
+			<a href="#">Home</a>
+			<a href="#">English</a>
+			<a href="#">Favorite</a>
+		</nav>
+
+		<div class="account">
+			<a id="signup" href="#">SignUp</a>
 		</div>
-	 
-	</div>
 
-	<div class="container">
-		<div class="content">
-			<table class="table">
-				<tr>
-					<th class="tb-head" style="width: 2em;"></th>
-					<th class="tb-head" style="width: 5em;">#</th>
-					<th class="tb-head" style="width: 12em;">Country</th>
-					<th class="tb-head" style="width: 12em;">City</th>
-					<th class="tb-head" style="width: 7em;">Image</th>
-					<th class="tb-head" style="width: 12em;">Edit</th>
-				</tr>
-
-				<tr>
-					<td><input type="checkbox" name=""></td>
-					<td>1</td>
-					<td>Cambodia</td>
-					<td>Phnom Penh</td>
-					<td>2 img</td>
-					<td><a href="#">Edit</a><a href="#">Delete</a></td>
-				</tr>
-			</table>
-		</div>
-	</div>
 	
+	</header>
+
+
+	<section class="home">
+			<img id="bg-img"src="image.jpg" alt="">
+			<form action="#" class="search-bar">
+				<a href="" id="search-icon" ><img src="search.svg" alt="glasses"></a>
+				<input id="search-input" type="text" name="search" placeholder="Where you want to go?" autocomplete="off">
+			</form>
+	</section>
+
+	<section class="shows">
+		<div class="content">
+			<img src="image.jpg" alt="">
+		</div>
+	</section>
+
+
+
 </body>
 </html>
