--- a/youtube.html
+++ b/youtube.html
@@ -3,11 +3,36 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles/general.css">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/header.css">
 	<title>YouTube.com Mirro</title>
 </head>
 <body>
-	<input class="search-bar" type="text" name="search">
+
+	<div class="header">
+		<div class="left">
+			<img id="burgur" src="images/menu-icon/hamburgur.svg" alt="">
+			<img id="logo" src="images/menu-icon/youtube.png" alt="">
+		</div>
+		<div class="middle">
+			<div class="bar">
+				<button class="search-btn" ><img src="images/menu-icon/glasses.svg" alt=""></button>
+				<input class="search-bar" type="text" name="search" autocomplete="off" placeholder="Search">
+
+			</div>
+			
+			
+			<button class="mic-btn" ><img src="images/menu-icon/mic.svg" alt=""></button>
+		</div>
+		<div class="right">
+			right
+		</div>
+		
+	</div>
+	
+
+<div class="container">	
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/hq720.jpg" alt="thumbnail">
@@ -18,9 +43,9 @@
 				<img src="images/icon/icon1.jpg" alt="">
 			</div>
 			<div class="video-info" >
-				<p>Fauna loves violence</p>
-				<p>Sakasandayo</p>
-				<p>221K views &#183;  2 days ago</p>
+				<p class="video-title" >Fauna loves violence</p>
+				<p class="video-aurthor" >Sakasandayo</p>
+				<p class="video-stats" >221K views &#183;  2 days ago</p>
 			</div>
 			
 		</div>
@@ -28,11 +53,101 @@
 	</div>
 
 	<div class="video-preview">
-		<img class="thumbnail" src="images/hqdefault.jpg" alt="thumbnail">
-		<p>【リコリス・リコイル】千束のお尻をガチで蹴り返すたきな</p>
-		<p>GaGu</p>
-		<p>14K views8 &#183; days ago</p>
+		<div class="vertical1">
+			<img class="thumbnail" src="images/hqdefault.jpg" alt="thumbnail">
+		</div>
+
+		<div class="vertical2">
+			<div class="channel-picture" >
+				<img src="images/icon/icon2.jpg" alt="">
+			</div>
+			<div class="video-info" >
+				<p class="video-title" >【リコリス・リコイル】千束のお尻をガチで蹴り返すたきな</p>
+				<p class="video-aurthor" >GaGu</p>
+				<p class="video-stats" >14K views8 &#183; days ago</p>
+			</div>
+			
+		</div>
 	</div>
+
+	<div class="video-preview">
+		<div class="vertical1">
+			<img class="thumbnail" src="images/4.webp" alt="thumbnail">
+		</div>
+
+		<div class="vertical2">
+			<div class="channel-picture" >
+				<img src="images/icon/icon3.jpg" alt="">
+			</div>
+			<div class="video-info" >
+				<p class="video-title" >TVアニメ『よふかしのうた』ノンクレジットED</p>
+				<p class="video-aurthor" >ノイタミナ YouTubeチャンネル</p>
+				<p class="video-stats" >14K views8 &#183; days ago</p>
+			</div>
+			
+		</div>
+	</div>
+
+	<div class="video-preview">
+		<div class="vertical1">
+			<img class="thumbnail" src="images/hq720_live.webp" alt="thumbnail">
+		</div>
+
+		<div class="vertical2">
+			<div class="channel-picture" >
+				<img src="images/icon/icon4.jpg" alt="">
+			</div>
+			<div class="video-info" >
+				<p class="video-title" >【RUST】release the shark</p>
+				<p class="video-aurthor" >Gawr Gura Ch. hololive-EN</p>
+				<p class="video-stats" >221K views &#183;  2 days ago</p>
+			</div>
+			
+		</div>
+
+	</div>
+
+	<div class="video-preview">
+		<div class="vertical1">
+			<img class="thumbnail" src="images/6.webp" alt="thumbnail">
+		</div>
+
+		<div class="vertical2">
+			<div class="channel-picture" >
+				<img src="images/icon/6.jpg" alt="">
+			</div>
+			<div class="video-info" >
+				<p class="video-title" >≪STRAY≫ im a rat i mean cat</p>
+				<p class="video-aurthor" >Hakos Baelz Ch. hololive-EN</p>
+				<p class="video-stats" >14K views8 &#183; days ago</p>
+			</div>
+			
+		</div>
+	</div>
+
+	<div class="video-preview">
+		<div class="vertical1">
+			<img class="thumbnail" src="images/5.webp" alt="thumbnail">
+		</div>
+
+		<div class="vertical2">
+			<div class="channel-picture" >
+				<img src="images/icon/icon5.jpg" alt="">
+			</div>
+			<div class="video-info" >
+				<p class="video-title" >【Elden Ring】ITS COLD AT THE TOP (spoilers) brrrr</p>
+				<p class="video-aurthor" >Watson Amelia Ch. hololive-EN</p>
+				<p class="video-stats" >221K views &#183;  2 days ago</p>
+			</div>
+			
+		</div>
+
+	</div>
+
+
+		</div>
+	</div>
+</div>
 
 
 </body>
