--- a/youtube.html
+++ b/youtube.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="styles/general.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/header.css">
+	<link rel="stylesheet" href="styles/sidebar.css">
 	<title>YouTube.com Mirro</title>
 </head>
 <body>
@@ -16,26 +17,39 @@
 			<img id="logo" src="images/menu-icon/youtube.png" alt="">
 		</div>
 		<div class="middle">
-			<div class="bar">
-				<button class="search-btn" ><img src="images/menu-icon/glasses.svg" alt=""></button>
-				<input class="search-bar" type="text" name="search" autocomplete="off" placeholder="Search">
+			<button class="search-btn" ><img src="images/menu-icon/glasses.svg" alt=""><div class="tooltip">Search</div></button>
+			<input class="search-bar" type="text" name="search" autocomplete="off" placeholder="Search">
+			<button class="mic-btn" ><img src="images/menu-icon/mic.svg" alt="">
+			<div class="tooltip">Voice Search</div></button>
 
-			</div>
-			
-			
-			<button class="mic-btn" ><img src="images/menu-icon/mic.svg" alt=""></button>
 		</div>
 		<div class="right">
-			right
+			<img class="" src="images/menu-icon/video.svg" alt="">
+			<img class="" src="images/menu-icon/more.svg" alt="">
+			<div class="bell">
+				<img class="" src="images/menu-icon/bell.svg" alt="">
+				<div class="notification">3</div>
+			</div>
+			
+			<img class="icon" src="images/icon/icon1.jpg" alt="">
 		</div>
 		
 	</div>
 	
+	<div class="sidebar">
+		<div class="sidebar-item"><img src="images/menu-icon/house-solid.svg" alt=""><div>Home</div></div>
+		<div class="sidebar-item"><img src="images/menu-icon/youtube-brands.svg" alt=""><div>Subscriptions</div></div>
+		<div class="sidebar-item"><img src="images/menu-icon/compass-solid.svg" alt=""><div>Discover</div></div>
+		<div class="sidebar-item"><img src="images/menu-icon/gamepad-solid.svg" alt=""><div>YouTube Gaming</div></div>
+		<div class="sidebar-item"><img src="images/menu-icon/audio-description-solid.svg" alt=""><div>Shorts</div></div>
+		<div class="sidebar-item"><img src="images/menu-icon/circle-play-solid.svg" alt=""><div>YouTube Music</div></div>
+	</div>
 
 <div class="container">	
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/hq720.jpg" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
@@ -55,6 +69,7 @@
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/hqdefault.jpg" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
@@ -73,6 +88,7 @@
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/4.webp" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
@@ -91,6 +107,7 @@
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/hq720_live.webp" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
@@ -110,6 +127,7 @@
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/6.webp" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
@@ -128,6 +146,7 @@
 	<div class="video-preview">
 		<div class="vertical1">
 			<img class="thumbnail" src="images/5.webp" alt="thumbnail">
+			<div class="video-time">14:20</div>
 		</div>
 
 		<div class="vertical2">
